EPMRPP-87601 || Refactor code smell