@@ -27,7 +27,6 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.jclouds.blobstore.BlobStore;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -65,9 +64,9 @@ public class LocalDataStorageService implements DataStorageService {
     if (featureFlagHandler.isEnabled(FeatureFlag.SINGLE_BUCKET)) {
       Map<String, List<String>> bucketPathMap = retrieveBucketPathMap(paths);
       for (Map.Entry<String, List<String>> bucketPaths : bucketPathMap.entrySet()) {
-        removeFiles(SINGLE_BUCKET_NAME,
-            bucketPaths.getValue().stream().map(s -> bucketPaths.getKey() + "/" + s)
-                .collect(Collectors.toList())
+        removeFiles(
+            SINGLE_BUCKET_NAME,
+            bucketPaths.getValue().stream().map(s -> bucketPaths.getKey() + "/" + s).toList()
         );
         deleteEmptyDirs(Paths.get(baseDirectory, SINGLE_BUCKET_NAME, PROJECT_PREFIX));
       }
